Fix: [UI] fix loading icon alignment

--- a/src/main.sass
+++ b/src/main.sass
@@ -84,6 +84,7 @@ body
 // Main UI container
 .container
   display: flex
+  justify-content: space-around
   min-width: 960px
 
   // <section> tags will represent columns in the table
